fixing author names

--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
 
 
 
-  <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/ana-dodik/">Ana Dodik</a></span>
+  <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/ana-dodik/">Ana Dodik</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/marios-papas/">Marios Papas</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person">Cengiz Öztireli</span>, <span itemprop="author name" itemtype="http://schema.org/Person">Thomas Müller</span>
 
       </div>
       
