--- a/publication/sdmm-paper/index.html
+++ b/publication/sdmm-paper/index.html
@@ -314,7 +314,7 @@
 
 
 
-  <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/ana-dodik/">Ana Dodik</a></span>
+  <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/ana-dodik/">Ana Dodik</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/marios-papas/">Marios Papas</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person">Cengiz Öztireli</span>, <span itemprop="author name" itemtype="http://schema.org/Person">Thomas Müller</span>
 
   </div>
   
@@ -557,7 +557,7 @@
 
 
 
-  <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/ana-dodik/">Ana Dodik</a></span>
+  <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/ana-dodik/">Ana Dodik</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person"><a href="/authors/marios-papas/">Marios Papas</a></span>, <span itemprop="author name" itemtype="http://schema.org/Person">Cengiz Öztireli</span>, <span itemprop="author name" itemtype="http://schema.org/Person">Thomas Müller</span>
 
   </div>
   
