--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/2111.13094" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/sdmm-paper/sdmm-paper.pdf" target="_blank" rel="noopener">
   Preprint
 </a>
 
@@ -606,12 +606,10 @@
 
 
   
-    
-  
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/pdf/2111.13094.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/sdmm-paper/sdmm-paper.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
