--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
           </div>
         </div>
         <p id="intro"> 
-I am a PhD student at <b>MIT CSAIL</b> working on <b>geometry processing</b> with <i>Justin Solomon</i> and <i>Vincent Sitzmann</i>.
+I am a PhD student at MIT CSAIL working on geometry processing, advised by Prof. Justin Solomon and Prof. Vincent Sitzmann.
+</p> <p>
+Before MIT, I was a computer vision engineer at Meta. I have a Master's degree from ETH Zurich. While there, I had the amazing opportunity to work with Disney Research Studios on path tracing research.
  </p>
       </div>
     </div>
