Updating affiliation and news.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <body>
 	<div id="main">
 		<div id="header">
-      <img src="face_cropped.jpeg" alt="Picture of Ana">
+      <img src="face_cropped.jpeg" alt="Picture of Ana"/>
       <div id="title">
         <div id="name-and-contact">
           <h1> Ana Dodik </h1>
@@ -45,9 +45,10 @@
           </div>
         </div>
         <p id="intro"> 
-I am a PhD student at MIT CSAIL working on geometry processing, advised by Prof. Justin Solomon and Prof. Vincent Sitzmann.
-</p> <p>
-Before MIT, I was a computer vision engineer at Meta. I have a Master's degree from ETH Zurich. While there, I had the amazing opportunity to work with Disney Research Studios on path tracing research.
+Second-year PhD student at MIT <a href="https://www.eecs.mit.edu/">EECS</a>, <a href="https://www.csail.mit.edu/">CSAIL</a> advised by Prof. Justin Solomon and Prof. Vincent Sitzmann.
+Working on problems at the intersection of graphics, vision, and algorithmic fairness.
+</p><p>
+Before MIT, I was a computer vision engineer at Meta. I have a Master's degree from ETH Zurich where I had the amazing opportunity to work with Disney Research Studios on path tracing research.
  </p>
       </div>
     </div>
@@ -62,6 +63,8 @@ Before MIT, I was a computer vision engineer at Meta. I have a Master's degree f
 		<div id="news" class="content-left middle-section">
       <!-- <h2>News</h2> -->
         <ul>
+          <li> <b>Invited talk at the Brown Visual Computing Seminar on May 3rd. Send me a message if you want to chat!</b> <i>on May 3 2024</i></li>
+          <li> <b>Talk at MIT's Visual Computing Seminar</b> <i>on Apr 16 2024</i></li>
           <li> <b>Variational Barycentric Coordinates accepted to SIGGRAPH Asia!</b> <i>on Sep 13 2023</i></li>
           <li> <b>Gave a talk at the <a href="http://www.geometrie.tugraz.at/events/og2023.html">Geometry Workshop in <s>Obergurgl</s> Innsbruck 2023</a> </b> <i>on Aug 28 2023</i></li>
           <li> <b>I will be presenting at the Queer in AI workshop at NeurIPS 2022.</b> <i>on Nov 28 2022</i></li>
